--- a/bubble-wrap-style.yaml
+++ b/bubble-wrap-style.yaml
@@ -3219,6 +3219,43 @@ layers:
                             mapzen_icon_library:
                                 size: [[6,[30px,18px]],[13,[31px,19px]],[15,[33px,21px]]]
 
+                US-OK:
+                    filter: |
+                        function() {
+                            return feature.shield_text && /^US:OK$/.test(feature.network)
+                        }
+                    draw:
+                        mapzen_icon_library:
+                            texture: mapzen_icon_library_shields_usa
+                            sprite: function() { return (feature.network + '-' + feature.shield_text.length + 'char'); }
+                            text:
+                                offset: [-2px, 2px]
+                    width_1char:
+                        filter: function() { return (feature.shield_text.length === 1) }
+                        draw:
+                            mapzen_icon_library:
+                                size: [[6,[19px,18px]],[13,[20px,19px]],[15,[20px,21px]]]
+                    width_2char:
+                        filter: function() { return (feature.shield_text.length === 2) }
+                        draw:
+                            mapzen_icon_library:
+                                size: [[6,[22px,18px]],[13,[23px,19px]],[15,[25px,21px]]]
+                    width_3char:
+                        filter: function() { return (feature.shield_text.length === 3) }
+                        draw:
+                            mapzen_icon_library:
+                                size: [[6,[24px,18px]],[13,[26px,19px]],[15,[28px,21px]]]
+                    width_4char:
+                        filter: function() { return (feature.shield_text.length === 4) }
+                        draw:
+                            mapzen_icon_library:
+                                size: [[6,[28px,18px]],[13,[30px,19px]],[15,[32px,21px]]]
+                    width_5char:
+                        filter: function() { return (feature.shield_text.length === 5) }
+                        draw:
+                            mapzen_icon_library:
+                                size: [[6,[31px,18px]],[13,[34px,19px]],[15,[34px,21px]]]
+
                 US-PA:
                     # Match Pennsylvania state highways
                     filter: |
@@ -3355,7 +3392,6 @@ layers:
                                 /^US:DE$/.test(feature.network) ||
                                 /^US:KY$/.test(feature.network) ||
                                 /^US:MS$/.test(feature.network) ||
-                                /^US:OK$/.test(feature.network) ||
                                 /^US:OR$/.test(feature.network) ||
                                 /^US:SC$/.test(feature.network) ||
                                 /^US:SD$/.test(feature.network) ||
