--- a/bubble-wrap-style.yaml
+++ b/bubble-wrap-style.yaml
@@ -3256,6 +3256,43 @@ layers:
                             mapzen_icon_library:
                                 size: [[6,[31px,18px]],[13,[34px,19px]],[15,[34px,21px]]]
 
+                US-OR:
+                    filter: |
+                        function() {
+                            return feature.shield_text && /^US:OR$/.test(feature.network)
+                        }
+                    draw:
+                        mapzen_icon_library:
+                            texture: mapzen_icon_library_shields_usa
+                            sprite: function() { return (feature.network + '-' + feature.shield_text.length + 'char'); }
+                            text:
+                                offset: [0px, -1px]
+                    width_1char:
+                        filter: function() { return (feature.shield_text.length === 1) }
+                        draw:
+                            mapzen_icon_library:
+                                size: [[6,[18px,18px]],[13,[21px,21px]],[15,[22px,22px]]]
+                    width_2char:
+                        filter: function() { return (feature.shield_text.length === 2) }
+                        draw:
+                            mapzen_icon_library:
+                                size: [[6,[20px,18px]],[13,[23px,21px]],[15,[25px,22px]]]
+                    width_3char:
+                        filter: function() { return (feature.shield_text.length === 3) }
+                        draw:
+                            mapzen_icon_library:
+                                size: [[6,[24px,18px]],[13,[27px,21px]],[15,[28px,22px]]]
+                    width_4char:
+                        filter: function() { return (feature.shield_text.length === 4) }
+                        draw:
+                            mapzen_icon_library:
+                                size: [[6,[28px,18px]],[13,[31px,21px]],[15,[32px,22px]]]
+                    width_5char:
+                        filter: function() { return (feature.shield_text.length === 5) }
+                        draw:
+                            mapzen_icon_library:
+                                size: [[6,[29px,18px]],[13,[33px,22px]],[15,[34px,22px]]]
+
                 US-PA:
                     # Match Pennsylvania state highways
                     filter: |
@@ -3392,7 +3429,6 @@ layers:
                                 /^US:DE$/.test(feature.network) ||
                                 /^US:KY$/.test(feature.network) ||
                                 /^US:MS$/.test(feature.network) ||
-                                /^US:OR$/.test(feature.network) ||
                                 /^US:SC$/.test(feature.network) ||
                                 /^US:SD$/.test(feature.network) ||
                                 /^US:TN$/.test(feature.network) ||
