utah shields sizing and offset

--- a/bubble-wrap-style.yaml
+++ b/bubble-wrap-style.yaml
@@ -3393,6 +3393,45 @@ layers:
                             text:
                                 offset: [0px, -2px]
 
+                US-UT:
+                    # Match Pennsylvania state highways
+                    filter: |
+                        function() {
+                            return feature.shield_text && /^US:UT$/.test(feature.network)
+                        }
+                    draw:
+                        mapzen_icon_library:
+                            texture: mapzen_icon_library_shields_usa
+                            sprite: |
+                                function() { return ( 'US:UT-' + feature.shield_text.length + 'char'); }
+                            text:
+                                offset: [0px, 1px]
+                    width_1char:
+                        filter: function() { return (feature.shield_text.length === 1) }
+                        draw:
+                            mapzen_icon_library:
+                                size: [[6,[21px,18px]],[13,[24px,21px]],[15,[25px,22px]]]
+                    width_2char:
+                        filter: function() { return (feature.shield_text.length === 2) }
+                        draw:
+                            mapzen_icon_library:
+                                size: [[6,[22px,18px]],[13,[25px,21px]],[15,[26px,22px]]]
+                    width_3char:
+                        filter: function() { return (feature.shield_text.length === 3) }
+                        draw:
+                            mapzen_icon_library:
+                                size: [[6,[26px,18px]],[13,[29px,21px]],[15,[30px,22px]]]
+                    width_4char:
+                        filter: function() { return (feature.shield_text.length === 4) }
+                        draw:
+                            mapzen_icon_library:
+                                size: [[6,[30px,18px]],[13,[34px,21px]],[15,[35px,22px]]]
+                    width_5char:
+                        filter: function() { return (feature.shield_text.length === 5) }
+                        draw:
+                            mapzen_icon_library:
+                                size: [[6,[33px,18px]],[13,[37px,21px]],[15,[39px,22px]]]
+
                 # USA County Routes
                 US-counties:
                     # Match state highways: `US:??:*`
@@ -3491,7 +3530,6 @@ layers:
                                 /^US:DE$/.test(feature.network) ||
                                 /^US:KY$/.test(feature.network) ||
                                 /^US:MS$/.test(feature.network) ||
-                                /^US:UT$/.test(feature.network) ||
                                 /^US:VA$/.test(feature.network) ||
                                 /*TODO: US:VA:secondary*/
                                 /^US:VT$/.test(feature.network) ||
