--- a/bubble-wrap-style.yaml
+++ b/bubble-wrap-style.yaml
@@ -3432,6 +3432,58 @@ layers:
                             mapzen_icon_library:
                                 size: [[6,[33px,18px]],[13,[37px,21px]],[15,[39px,22px]]]
 
+                US-VA:
+                    filter: |
+                        function() {
+                            return feature.shield_text && /^US:VA$/.test(feature.network)
+                        }
+                    draw:
+                        mapzen_icon_library:
+                            texture: mapzen_icon_library_shields_usa
+                            sprite: function() { return (feature.network + '-' + feature.shield_text.length + 'char'); }
+                            #priority: 48
+                            text:
+                                offset: [0px, -1px]
+
+                US-WA:
+                    # Match Pennsylvania state highways
+                    filter: |
+                        function() {
+                            return feature.shield_text && /^US:WA$/.test(feature.network)
+                        }
+                    draw:
+                        mapzen_icon_library:
+                            texture: mapzen_icon_library_shields_usa
+                            sprite: |
+                                function() { return ( 'US:WA-' + feature.shield_text.length + 'char'); }
+                            text:
+                                offset: [0px, -2px]
+                    width_1char:
+                        filter: function() { return (feature.shield_text.length === 1) }
+                        draw:
+                            mapzen_icon_library:
+                                size: [[6,[18px,19px]],[13,[19px,21px]],[15,[20px,22px]]]
+                    width_2char:
+                        filter: function() { return (feature.shield_text.length === 2) }
+                        draw:
+                            mapzen_icon_library:
+                                size: [[6,[19px,19px]],[13,[21px,21px]],[15,[22px,22px]]]
+                    width_3char:
+                        filter: function() { return (feature.shield_text.length === 3) }
+                        draw:
+                            mapzen_icon_library:
+                                size: [[6,[24px,19px]],[13,[25px,21px]],[15,[26px,22px]]]
+                    width_4char:
+                        filter: function() { return (feature.shield_text.length === 4) }
+                        draw:
+                            mapzen_icon_library:
+                                size: [[6,[27px,19px]],[13,[30px,22px]],[15,[31px,23px]]]
+                    width_5char:
+                        filter: function() { return (feature.shield_text.length === 5) }
+                        draw:
+                            mapzen_icon_library:
+                                size: [[6,[32px,19px]],[13,[35px,22px]],[15,[36px,23px]]]
+
                 # USA County Routes
                 US-counties:
                     # Match state highways: `US:??:*`
@@ -3530,7 +3582,6 @@ layers:
                                 /^US:DE$/.test(feature.network) ||
                                 /^US:KY$/.test(feature.network) ||
                                 /^US:MS$/.test(feature.network) ||
-                                /^US:VA$/.test(feature.network) ||
                                 /*TODO: US:VA:secondary*/
                                 /^US:VT$/.test(feature.network) ||
                                 /^US:WA$/.test(feature.network) ||
